hphp/test/slow/coeffects/rx/is_enabled_bad1.php.expectf
Fatal error: Undefined constant 'HH\Rx\IS_ENABLED' in %s/is_enabled_bad1.php on line 5
